Fixed light and contrast

--- a/frontend/src/styles/Settings/Contrast.css
+++ b/frontend/src/styles/Settings/Contrast.css
@@ -4,7 +4,11 @@ body.contrast .App {
 }
 
 body.contrast .Main {
-    background-color: rgb(0, 0, 0)
+    background-color: rgb(0, 0, 0) !important
+}
+
+body.contrast {
+    background-color: rgb(0, 0, 0) !important
 }
 
 body.contrast .input {
